# thesis

./: .gitignore  README.md  _quarto.yml  pyproject.toml  references.bib  thesis.qmd
asset/: _advanced.yml
asset/biblatex/: custom.bbx  custom.cbx
asset/biblatex/jpa/: README.md
asset/partials/: before-body.tex  biblio.tex  title.tex
asset/tex/: preample.tex
etc/: install-haranoaji.ts
util/: quarto.py
