[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pystout>=0.0.8",
    "seaborn>=0.13.2",
    "stargazer>=0.0.7",
    "statsmodels>=0.14.4",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]
